roles/system/traefik-ext/files/middleware-chain-basic-auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-basic-auth
  namespace: default
spec:
  chain:
    middlewares:
      - name: middlewares-rate-limit
      - name: middlewares-secure-headers
      - name: middlewares-basic-auth
