roles/system/traefik-ext/files/middleware-chains-no-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-no-auth
  namespace: default
spec:
  chain:
    middlewares:
      - name: middlewares-rate-limit
      - name: middlewares-secure-headers
