roles/system/traefik-ext/files/middleware-https-only.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: default
spec:
  redirectScheme:
    scheme: https
